@@ -21,6 +21,7 @@ Version 1.4.0
     * don't steal Ctrl+B/U/I shortcuts from page
     * disabled by default opacity effect on tab previews - see BUILDING
     * improved showing navigation toolbar in fullscreen
+    * moved config directory into ~/.config/qupzilla
     * fixed opening browser with url with ampersand (%26) as command line argument
     * fixed scrolling to anchor in background tabs
     * fixed parsing UTF-8 filenames in Content-Disposition header
